# 9-cercles

./: .gitignore  CHANGELOG.md  README.md
Client/: CMakeLists.txt  main.cpp
Client/include/: KeyLogger.h  LPTF_Client.h  LPTF_Packet.h  LPTF_Socket.h  ProcessManager.h  SystemCommand.h  SystemInfo.h
Client/src/: KeyLogger.cpp  LPTF_Client.cpp  LPTF_Packet.cpp  LPTF_Socket.cpp  ProcessManager.cpp  SystemCommand.cpp  SystemInfo.cpp  client.cpp
Client/test/: test_socket.cpp
Client/tests/: tests_client.cpp
Server/: CMakeLists.txt  resources.qrc
Server/include/: LPTF_Database.h  LPTF_Packet.h  LPTF_Server.h  LPTF_Socket.h
Server/include/ui/: BaseClientWidget.h  DashboardWidget.h  DatabaseWidget.h  InfoSystemWidget.h  MainWindow.h  ProcessManagerWidget.h  SystemCommandWidget.h
Server/include/ui/common/: utils.h
Server/resources/: data.sql
Server/src/: LPTF_Database.cpp  LPTF_Packet.cpp  LPTF_Server.cpp  LPTF_Socket.cpp  mainwindow.cpp  mainwindow.ui  server.cpp  server_gui.cpp
Server/src/ui/: BaseClientWidget.cpp  DashboardWidget.cpp  DatabaseWidget.cpp  InfoSystemWidget.cpp  MainWindow.cpp  ProcessManagerWidget.cpp  SystemCommandWidget.cpp  mainwindow.ui  mainwindow.ui.autosave
Server/test/: test_packet.cpp  test_socket.cpp
Server/tests/: tests_server.cpp
